initial logic for creating child note

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "folgezettel-note-creator",
+	"name": "Folgezettel Note Creator",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Create new zettels with proper IDs",
+	"author": "Narwhai",
+	"authorUrl": "https://github.com/Narwhai",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
